services-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-service
  template:
    metadata:
      labels:
        app: front-service
    spec:
      containers:
        - image: efrei/front-service:1
          imagePullPolicy: IfNotPresent
          name: front-service
      restartPolicy: Always


---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-service
  template:
    metadata:
      labels:
        app: back-service
    spec:
      containers:
        - image: efrei/back-service:1
          imagePullPolicy: IfNotPresent
          name: back-service
      restartPolicy: Always
