ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: front-service.info
      http:
        paths:
          - path: /front-service
            pathType: Prefix
            backend:
              service:
                name: front-service
                port:
                  number: 8080
          - path: /back-service
            pathType: Prefix
            backend:
              service:
                name: back-service
                port:
                  number: 8080
